Arduino/house/.metadata/.plugins/org.eclipse.cdt.ui/TestButton.build.log
21:45:46 **** Incremental Build of configuration Release for project TestButton ****
"C:\\WORK\\ARDUINO\\Eclipse\\win64.2016-03-07_15-24-47\\arduinoPlugin\\tools\\make\\make" all 
'Building file: C:/SHARE/ARDUINO/PROGRAMMING/Arduino/libraries/COA/TimedRelayComponent.cpp'
'Starting C++ compile'
"C:\WORK\ARDUINO\Eclipse\win64.2016-03-07_15-24-47\arduinoPlugin\tools\arduino\avr-gcc\4.8.1-arduino5/bin/avr-g++" -c -g -Os -fno-exceptions -ffunction-sections -fdata-sections -fno-threadsafe-statics -MMD -mmcu=atmega2560 -DF_CPU=16000000L -DARDUINO=10606 -DARDUINO_AVR_MEGA2560 -DARDUINO_ARCH_AVR     -I"C:\WORK\ARDUINO\Eclipse\win64.2016-03-07_15-24-47\arduinoPlugin\packages\arduino\hardware\avr\1.6.8\cores\arduino" -I"C:\WORK\ARDUINO\Eclipse\win64.2016-03-07_15-24-47\arduinoPlugin\packages\arduino\hardware\avr\1.6.8\variants\mega" -I"C:\SHARE\ARDUINO\PROGRAMMING\Arduino\libraries\Bounce2" -I"C:\SHARE\ARDUINO\PROGRAMMING\Arduino\libraries\COA" -I"C:\WORK\ARDUINO\Eclipse\win64.2016-03-07_15-24-47\arduinoPlugin\packages\arduino\hardware\avr\1.6.8\libraries\Wire" -I"C:\WORK\ARDUINO\Eclipse\win64.2016-03-07_15-24-47\arduinoPlugin\packages\arduino\hardware\avr\1.6.8\libraries\Wire\utility" -I"C:\SHARE\ARDUINO\PROGRAMMING\Arduino\libraries\DHT" -I"C:\SHARE\ARDUINO\PROGRAMMING\Arduino\libraries\LiquidCrystal_I2C" -I"C:\WORK\ARDUINO\Eclipse\win64.2016-03-07_15-24-47\arduinoPlugin\libraries\Ethernet\1.1.1" -I"C:\WORK\ARDUINO\Eclipse\win64.2016-03-07_15-24-47\arduinoPlugin\libraries\Ethernet\1.1.1\src" -I"C:\WORK\ARDUINO\Eclipse\win64.2016-03-07_15-24-47\arduinoPlugin\packages\arduino\hardware\avr\1.6.8\libraries\SPI" -MMD -MP -MF"libraries/COA/TimedRelayComponent.cpp.d" -MT"libraries/COA/TimedRelayComponent.cpp.o" -D__IN_ECLIPSE__=1 -x c++ "C:/SHARE/ARDUINO/PROGRAMMING/Arduino/libraries/COA/TimedRelayComponent.cpp"  -o  "libraries/COA/TimedRelayComponent.cpp.o"   -Wall
In file included from C:/SHARE/ARDUINO/PROGRAMMING/Arduino/libraries/COA/TimedRelayComponent.cpp:1:0:
C:/SHARE/ARDUINO/PROGRAMMING/Arduino/libraries/COA/TimedRelayComponent.h:11:112: error: 'ButtonComponent' has not been declared
         TimedRelayComponent (uint8_t pin, uint8_t initialState, bool inverted, uint32_t defaultDurationMillis, ButtonComponent* triggerButton, const char* name = NULL, uint32_t reportMillis = 0);
                                                                                                                ^
In file included from C:/SHARE/ARDUINO/PROGRAMMING/Arduino/libraries/COA/TimedRelayComponent.cpp:1:0:
C:/SHARE/ARDUINO/PROGRAMMING/Arduino/libraries/COA/TimedRelayComponent.h:22:9: error: 'ButtonComponent' does not name a type
         ButtonComponent* triggerButton;
         ^
C:/SHARE/ARDUINO/PROGRAMMING/Arduino/libraries/COA/TimedRelayComponent.cpp:8:125: error: 'ButtonComponent' has not been declared
 TimedRelayComponent::TimedRelayComponent (uint8_t pin, uint8_t initialState, bool inverted, uint32_t defaultDurationMillis, ButtonComponent* triggerButton, const char* name, uint32_t reportMillis) :
                                                                                                                             ^
C:/SHARE/ARDUINO/PROGRAMMING/Arduino/libraries/COA/TimedRelayComponent.cpp: In constructor 'TimedRelayComponent::TimedRelayComponent(uint8_t, uint8_t, bool, uint32_t, int*, const char*, uint32_t)':
C:/SHARE/ARDUINO/PROGRAMMING/Arduino/libraries/COA/TimedRelayComponent.cpp:14:11: error: 'class TimedRelayComponent' has no member named 'triggerButton'
     this->triggerButton = triggerButton;
           ^
C:/SHARE/ARDUINO/PROGRAMMING/Arduino/libraries/COA/TimedRelayComponent.cpp: In member function 'virtual void TimedRelayComponent::setup()':
C:/SHARE/ARDUINO/PROGRAMMING/Arduino/libraries/COA/TimedRelayComponent.cpp:19:9: error: 'triggerButton' was not declared in this scope
     if (triggerButton != NULL)
         ^
C:/SHARE/ARDUINO/PROGRAMMING/Arduino/libraries/COA/TimedRelayComponent.cpp: In member function 'virtual int TimedRelayComponent::readFromComponent(Message*)':
C:/SHARE/ARDUINO/PROGRAMMING/Arduino/libraries/COA/TimedRelayComponent.cpp:69:9: error: 'triggerButton' was not declared in this scope
     if (triggerButton != NULL && triggerButton->onPress ())
         ^
libraries/COA/subdir.mk:161: recipe for target 'libraries/COA/TimedRelayComponent.cpp.o' failed
make: *** [libraries/COA/TimedRelayComponent.cpp.o] Error 1

21:45:51 Build Finished (took 4s.70ms)

